--- a/translate/keycloak/downloads.html
+++ b/translate/keycloak/downloads.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <title>Keycloak - Downloads</title>
+    <title>Keycloak - 下载</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Keycloak is an open source identity and access management solution">
     <meta name="author" content="Keycloak Team">
@@ -40,14 +40,14 @@
             </div>
             <div id="mainBtnTarget" class="col-md-9 col-sm-9 col-xs-12 collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="documentation.html">Docs</a></li>
-                    <li><a href="downloads.html">Downloads</a></li>
-                    <li><a href="community.html">Community</a></li>
-                    <li><a href="extensions.html">Extensions</a></li>
-                    <li><a href="security.html">Security</a></li>
+                    <li><a href="about.html">关于</a></li>
+                    <li><a href="documentation.html">文档</a></li>
+                    <li><a href="downloads.html">下载</a></li>
+                    <li><a href="community.html">社区</a></li>
+                    <li><a href="extensions.html">扩展</a></li>
+                    <li><a href="security.html">安全</a></li>
                     <li><a href="https://cse.google.com/cse?cx=003352037071895905641:hyz4b1vj6uu" target="_blank">Search</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="blog.html">博客</a></li>
                 </ul>
             </div>
         </div>
@@ -56,12 +56,12 @@
 
 <div class="page-section">
     <div class="container">
-        <h1>Downloads</h1>
+        <h1>下载</h1>
 
         <p>7.0.1 - <a href="docs/latest/release_notes/index.html">Release notes</a></p>
 
         <p>
-            For a list of community maintained extensions check out the <a href="extensions.html">Extensions</a> page.
+            For a list of community maintained extensions check out the <a href="extensions.html"></a> page.
         </p>
 
 
