--- a/translate/keycloak/index.html
+++ b/translate/keycloak/index.html
@@ -39,14 +39,14 @@
             </div>
             <div id="mainBtnTarget" class="col-md-9 col-sm-9 col-xs-12 collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="documentation.html">Docs</a></li>
-                    <li><a href="downloads.html">Downloads</a></li>
-                    <li><a href="community.html">Community</a></li>
-                    <li><a href="extensions.html">Extensions</a></li>
-                    <li><a href="security.html">Security</a></li>
+                    <li><a href="about.html">关于</a></li>
+                    <li><a href="documentation.html">文档</a></li>
+                    <li><a href="downloads.html">下载</a></li>
+                    <li><a href="community.html">社区</a></li>
+                    <li><a href="extensions.html">扩展</a></li>
+                    <li><a href="security.html">安全</a></li>
                     <li><a href="https://cse.google.com/cse?cx=003352037071895905641:hyz4b1vj6uu" target="_blank">Search</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="blog.html">博客</a></li>
                 </ul>
             </div>
         </div>
