--- a/translate/keycloak/index.html
+++ b/translate/keycloak/index.html
@@ -70,7 +70,7 @@
         <div class="row">
             <div class="col-sm-7 col-xs-12 left-col">
                 <p>
-                    以最小的代价为应用添加身份验证和安全防护。无需存储或验证用户。开箱即用。
+                    方便快捷的为应用添加身份验证和安全防护。无需存储或验证用户。开箱即用。
                 </p>
                 <p>
                     You'll even get advanced features such as User Federation, Identity Brokering and Social Login.
