--- a/translate/cloudstack/en/latest/installguide/configuration.html
+++ b/translate/cloudstack/en/latest/installguide/configuration.html
@@ -648,7 +648,7 @@ parameter) if you want this host to be used only for VMs with the
 </li>
 <li><p class="first">In a new cluster, CloudStack adds the first primary storage server
 for you. You can always add more servers later. For an overview of
-what primary storage is, see About 主存储.</p>
+what primary storage is, see 主存储.</p>
 <p>To configure the first primary storage server, enter the following,
 then click Next:</p>
 <ul class="simple">
