--- a/translate/cloudstack/projects/cloudstack-release-notes.html
+++ b/translate/cloudstack/projects/cloudstack-release-notes.html
@@ -5,21 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Apache CloudStack 发行版本说明 &#8212; Apache CloudStack 发行版本说明 4.12.0.0 documentation</title>
-    <link rel="stylesheet" href="archived-cloudstack-release-notes/en/4.11.1.0/_static/basic.css" type="text/css" />
-    <link rel="stylesheet" href="archived-cloudstack-release-notes/en/4.11.1.0/_static/pygments.css" type="text/css" />
+    <link rel="stylesheet" href="archived-cloudstack-release-notes/en/4.11.1.0/static/basic.css" type="text/css" />
+    <link rel="stylesheet" href="archived-cloudstack-release-notes/en/4.11.1.0/static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="https://media.readthedocs.org/css/badge_only.css" type="text/css" />
-    <link rel="stylesheet" href="archived-cloudstack-release-notes/en/4.11.1.0/_static/bootswatch-3.2.0/spacelab/bootstrap.min.css" type="text/css" />
-    <link rel="stylesheet" href="archived-cloudstack-release-notes/en/4.11.1.0/_static/bootstrap-sphinx.css" type="text/css" />
-    <script type="text/javascript" id="documentation_options" data-url_root="./" src="archived-cloudstack-release-notes/en/4.11.1.0/_static/documentation_options.js"></script>
+    <link rel="stylesheet" href="archived-cloudstack-release-notes/en/4.11.1.0/static/bootswatch-3.2.0/spacelab/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="archived-cloudstack-release-notes/en/4.11.1.0/static/bootstrap-sphinx.css" type="text/css" />
+    <script type="text/javascript" id="documentation_options" data-url_root="./" src="archived-cloudstack-release-notes/en/4.11.1.0/static/documentation_options.js"></script>
     <script type="text/javascript" src="https://media.readthedocs.org/javascript/jquery/jquery-2.0.3.min.js"></script>
     <script type="text/javascript" src="https://media.readthedocs.org/javascript/jquery/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="https://media.readthedocs.org/javascript/underscore.js"></script>
     <script type="text/javascript" src="https://media.readthedocs.org/javascript/doctools.js"></script>
     <script type="text/javascript" src="https://media.readthedocs.org/javascript/readthedocs-doc-embed.js"></script>
-    <script type="text/javascript" src="archived-cloudstack-release-notes/en/4.11.1.0/_static/js/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="archived-cloudstack-release-notes/en/4.11.1.0/_static/js/jquery-fix.js"></script>
-    <script type="text/javascript" src="archived-cloudstack-release-notes/en/4.11.1.0/_static/bootstrap-3.2.0/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="archived-cloudstack-release-notes/en/4.11.1.0/_static/bootstrap-sphinx.js"></script>
+    <script type="text/javascript" src="archived-cloudstack-release-notes/en/4.11.1.0/static/js/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="archived-cloudstack-release-notes/en/4.11.1.0/static/js/jquery-fix.js"></script>
+    <script type="text/javascript" src="archived-cloudstack-release-notes/en/4.11.1.0/static/bootstrap-3.2.0/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="archived-cloudstack-release-notes/en/4.11.1.0/static/bootstrap-sphinx.js"></script>
     <link rel="author" title="About these documents" href="archived-cloudstack-release-notes/en/4.11.1.0/about.html" />
     <link rel="index" title="Index" href="archived-cloudstack-release-notes/en/4.11.1.0/genindex.html" />
     <link rel="search" title="Search" href="archived-cloudstack-release-notes/en/4.11.1.0/search.html" />
@@ -40,7 +40,7 @@ http://docs.readthedocs.org/en/latest/canonical.html
 
 <link rel="stylesheet" href="https://media.readthedocs.org/css/readthedocs-doc-embed.css" type="text/css" />
 
-<script type="text/javascript" src="archived-cloudstack-release-notes/en/4.11.1.0/_static/readthedocs-data.js"></script>
+<script type="text/javascript" src="archived-cloudstack-release-notes/en/4.11.1.0/static/readthedocs-data.js"></script>
 
 <!-- Add page-specific data, which must exist in the page js, not global -->
 <script type="text/javascript">
