replace _{path} to {path}

--- a/translate/cloudstack/projects/archived-cloudstack-administration/en/latest/projects.html
+++ b/translate/cloudstack/projects/archived-cloudstack-administration/en/latest/projects.html
@@ -280,7 +280,7 @@ and set up the invitations feature in CloudStack.</p>
 <li><p class="first">In the left navigation, click Global Settings.</p>
 </li>
 <li><p class="first">In the search box, type project and click the search button.
-<img alt="Searches projects" src="_images/search-button.png" /></p>
+<img alt="Searches projects" src="images/search-button.png" /></p>
 </li>
 <li><p class="first">In the search results, you can see a few other parameters you need to
 set to control how invitations behave. The table below shows global
@@ -379,7 +379,7 @@ that the project is allowed to own for each type of resource.</li>
 per-project maximum resource amounts that apply to all projects in
 the cloud. No project can have more resources, but an individual
 project can have lower limits. Click the edit button to set each
-parameter. <img alt="Edits Parameters" src="_images/edit-icon.png" /></p>
+parameter. <img alt="Edits Parameters" src="images/edit-icon.png" /></p>
 <table border="1" class="table-striped table-bordered table-hover docutils">
 <colgroup>
 <col width="17%" />
@@ -423,7 +423,7 @@ or you can restrict that ability to just CloudStack administrators.</p>
 </li>
 <li><p class="first">In the search box, type allow.user.create.projects.</p>
 </li>
-<li><p class="first">Click the edit button to set the parameter. <img alt="Edits Parameters" src="_images/edit-icon.png" /></p>
+<li><p class="first">Click the edit button to set the parameter. <img alt="Edits Parameters" src="images/edit-icon.png" /></p>
 <p><code class="docutils literal notranslate"><span class="pre">allow.user.create.projects</span></code></p>
 <p>Set to true to allow end users to create projects. Set to false if
 you want only the CloudStack root administrator and domain
@@ -562,8 +562,8 @@ parent domain, or the CloudStack root administrator.</p>
 <li><p class="first">Click the name of the project.</p>
 </li>
 <li><p class="first">Click one of the buttons:</p>
-<p>To delete, use <img alt="Removes a project" src="_images/delete-button.png" /></p>
-<p>To suspend, use <img alt="Suspends a project" src="_images/suspend-icon.png" /></p>
+<p>To delete, use <img alt="Removes a project" src="images/delete-button.png" /></p>
+<p>To suspend, use <img alt="Suspends a project" src="images/suspend-icon.png" /></p>
 </li>
 </ol>
 </div>
