--- a/translate/cloudstack/projects/archived-cloudstack-administration/en/latest/systemvm.html
+++ b/translate/cloudstack/projects/archived-cloudstack-administration/en/latest/systemvm.html
@@ -411,7 +411,7 @@ following:</p>
 <li>The desired domain name, prefixed with <code class="docutils literal notranslate"><span class="pre">*.</span></code>; for example, <code class="docutils literal notranslate"><span class="pre">*.consoleproxy.company.com</span></code></li>
 </ul>
 <blockquote>
-<div><p><img alt="Updating 控制台代理 SSL Certificate" src="_images/update-ssl.png" /></p>
+<div><p><img alt="Updating 控制台代理 SSL Certificate" src="images/update-ssl.png" /></p>
 </div></blockquote>
 </li>
 <li><p class="first">This stops all currently running console proxy VMs, then restarts
@@ -669,7 +669,7 @@ requirement.</p>
 <p>For example, if you have selected Group by zone, select the name
 of the desired zone.</p>
 </li>
-<li><p class="first">Click the Upgrade button to upgrade all the VRs. <img alt="Button to upgrade VR to use the new template." src="_images/vr-upgrade.png" /></p>
+<li><p class="first">Click the Upgrade button to upgrade all the VRs. <img alt="Button to upgrade VR to use the new template." src="images/vr-upgrade.png" /></p>
 </li>
 <li><p class="first">Click OK to confirm.</p>
 </li>
