--- a/translate/cloudstack/projects/archived-cloudstack-administration/en/latest/templates.html
+++ b/translate/cloudstack/projects/archived-cloudstack-administration/en/latest/templates.html
@@ -777,14 +777,14 @@ any of these settings, you can right-click on the specific setting
 and select Help. This will open the appropriate CHM help file with
 more information, including examples on the setting you are
 attempting to configure.</p>
-<p><img alt="System Image Manager" src="_images/sysmanager.png" /></p>
+<p><img alt="System Image Manager" src="images/sysmanager.png" /></p>
 </li>
 <li><p class="first">You need to automate the Software License Terms Selection page,
 otherwise known as the End-User License Agreement (EULA). To do
 this, expand the Microsoft-Windows-Shell-Setup component.
 High-light the OOBE setting, and add the setting to the Pass 7
 oobeSystem. In Settings, set HideEULAPage true.</p>
-<p><img alt="Depicts hiding the EULA page." src="_images/software-license.png" /></p>
+<p><img alt="Depicts hiding the EULA page." src="images/software-license.png" /></p>
 </li>
 <li><p class="first">Make sure the license key is properly set. If you use MAK key, you
 can just enter the MAK key on the Windows 2008 R2 VM. You need not
@@ -799,7 +799,7 @@ still expanded), expand UserAccounts, right-click on
 AdministratorPassword, and add the setting to the Pass 7
 oobeSystem configuration pass of your answer file. Under Settings,
 specify a password next to Value.</p>
-<p><img alt="Depicts changing the administrator password" src="_images/change-admin-password.png" /></p>
+<p><img alt="Depicts changing the administrator password" src="images/change-admin-password.png" /></p>
 <p>You may read the AIK documentation and set many more options that
 suit your deployment. The steps above are the minimum needed to
 make Windows unattended setup work.</p>
