--- a/translate/cloudstack/projects/archived-cloudstack-administration/en/latest/ui.html
+++ b/translate/cloudstack/projects/archived-cloudstack-administration/en/latest/ui.html
@@ -330,7 +330,7 @@ default is admin, password.</p>
 </li>
 <li><p class="first">Click the admin user name.</p>
 </li>
-<li><p class="first">Click the Change Password button. <img alt="button to change a user's password" src="_images/change-password.png" /></p>
+<li><p class="first">Click the Change Password button. <img alt="button to change a user's password" src="images/change-password.png" /></p>
 </li>
 <li><p class="first">Type the new password, and click OK.</p>
 </li>
