--- a/translate/cloudstack/projects/archived-cloudstack-administration/en/latest/usage.html
+++ b/translate/cloudstack/projects/archived-cloudstack-administration/en/latest/usage.html
@@ -532,7 +532,7 @@ domain.</p>
 displayed.</p>
 <p>A value of -1 shows that there is no limit in place.</p>
 </li>
-<li><p class="first">Click the Edit button <img alt="edits the settings." src="_images/edit-icon.png" /></p>
+<li><p class="first">Click the Edit button <img alt="edits the settings." src="images/edit-icon.png" /></p>
 </li>
 <li><p class="first">Edit the following as per your requirement:</p>
 <ul>
@@ -593,7 +593,7 @@ resource limit.</p>
 displayed.</p>
 <p>A value of -1 shows that there is no limit in place.</p>
 </li>
-<li><p class="first">Click the Edit button. <img alt="edits the settings." src="_images/edit-icon.png" /></p>
+<li><p class="first">Click the Edit button. <img alt="edits the settings." src="images/edit-icon.png" /></p>
 </li>
 <li><p class="first">Edit the following as per your requirement:</p>
 <ul>
