--- a/translate/cloudstack/projects/archived-cloudstack-installation/en/4.11/network_setup.html
+++ b/translate/cloudstack/projects/archived-cloudstack-installation/en/4.11/network_setup.html
@@ -535,7 +535,7 @@ provisioned, CloudStack will use the virtual router for these services.</p>
 <p>The Juniper SRX can optionally be used in conjunction with an external
 load balancer. External Network elements can be deployed in a
 side-by-side or inline configuration.</p>
-<p><img alt="parallel-mode.png: adding a firewall and load balancer in parallel mode." src="_images/parallel-mode.png" /></p>
+<p><img alt="parallel-mode.png: adding a firewall and load balancer in parallel mode." src="images/parallel-mode.png" /></p>
 <p>CloudStack requires the Juniper SRX firewall to be configured as follows:</p>
 <div class="admonition note">
 <p class="first admonition-title">提示</p>
