--- a/translate/cloudstack/projects/archived-cloudstack-administration/en/latest/hosts.html
+++ b/translate/cloudstack/projects/archived-cloudstack-administration/en/latest/hosts.html
@@ -338,13 +338,13 @@ first added to the cloud, it is Disabled by default.</p>
 <li>In the left navigation bar, click Infrastructure.</li>
 <li>In Zones, click View More.</li>
 <li>If you are disabling or enabling a zone, find the name of the zone in
-the list, and click the Enable/Disable button. <img alt="button to enable or disable zone, pod, or cluster." src="_images/enable-disable.png" /></li>
+the list, and click the Enable/Disable button. <img alt="button to enable or disable zone, pod, or cluster." src="images/enable-disable.png" /></li>
 <li>If you are disabling or enabling a pod or cluster, click the name of
 the zone that contains the pod or cluster.</li>
 <li>Click the Compute tab.</li>
 <li>In the Pods or Clusters node of the diagram, click View All.</li>
 <li>Click the pod or cluster name in the list.</li>
-<li>Click the Enable/Disable button. <img alt="button to enable or disable zone, pod, or cluster." src="_images/enable-disable.png" /></li>
+<li>Click the Enable/Disable button. <img alt="button to enable or disable zone, pod, or cluster." src="images/enable-disable.png" /></li>
 </ol>
 </div>
 <div class="section" id="removing-hosts">
@@ -696,7 +696,7 @@ work with.</p>
 </li>
 <li><p class="first">In the Guest node of the diagram, click Configure.</p>
 </li>
-<li><p class="first">Click Edit <img alt="button to edit the VLAN range." src="_images/edit-icon.png" />.</p>
+<li><p class="first">Click Edit <img alt="button to edit the VLAN range." src="images/edit-icon.png" />.</p>
 <p>The VLAN Ranges field now is editable.</p>
 </li>
 <li><p class="first">Specify the start and end of the VLAN range in comma-separated list.</p>
