--- a/translate/wot/index.html
+++ b/translate/wot/index.html
@@ -1733,7 +1733,7 @@
     <hr title="Separator for header">
   </div>
   <section id="abstract" class="introductory">
-    <h2>Abstract</h2>
+    <h2>摘要</h2>
     <p>The <abbr title="World Wide Web Consortium">W3C</abbr> Web
     of Things (WoT) is intended to enable interoperability across
     IoT platforms and application domains. Overall, the goal of the
@@ -1758,7 +1758,7 @@
     mechanisms or prescribe any concrete implementation.</p>
   </section>
   <section id="sotd" class="introductory">
-    <h2>Status of This Document</h2>
+    <h2>此文档的状态</h2>
     <p><em>This section describes the status of this document at
     the time of its publication. Other documents may supersede this
     document. A list of current <abbr title=
