--- a/translate/wot/index.html
+++ b/translate/wot/index.html
@@ -1815,29 +1815,28 @@
     Document</a>.</p>
   </section>
   <nav id="toc">
-    <h2 class="introductory" id="table-of-contents">Table of
-    Contents</h2>
+    <h2 class="introductory" id="table-of-contents">目录</h2>
     <ol class="toc">
       <li class="tocline">
         <a class="tocxref" href="#introduction"><bdi class=
-        "secno">1.</bdi> Introduction</a>
+        "secno">1.</bdi> 介绍</a>
       </li>
       <li class="tocline">
         <a class="tocxref" href="#conformance"><bdi class=
-        "secno">2.</bdi> Conformance</a>
+        "secno">2.</bdi> 一致性</a>
       </li>
       <li class="tocline">
         <a class="tocxref" href="#terminology"><bdi class=
-        "secno">3.</bdi> Terminology</a>
+        "secno">3.</bdi> 术语</a>
       </li>
       <li class="tocline">
         <a class="tocxref" href="#sec-use-cases"><bdi class=
-        "secno">4.</bdi> Use Cases</a>
+        "secno">4.</bdi> 用例</a>
         <ol class="toc">
           <li class="tocline">
             <a class="tocxref" href=
             "#sec-application-domains"><bdi class="secno">4.1</bdi>
-            Application Domains</a>
+            应用领域</a>
             <ol class="toc">
               <li class="tocline">
                 <a class="tocxref" href=
