--- a/translate/wot/index.html
+++ b/translate/wot/index.html
@@ -1841,18 +1841,17 @@
               <li class="tocline">
                 <a class="tocxref" href=
                 "#consumer-use-cases"><bdi class=
-                "secno">4.1.1</bdi> Consumer</a>
+                "secno">4.1.1</bdi> 消费者</a>
               </li>
               <li class="tocline">
                 <a class="tocxref" href=
                 "#industrial-iot-usecases"><bdi class=
-                "secno">4.1.2</bdi> Industrial</a>
+                "secno">4.1.2</bdi> 工业</a>
                 <ol class="toc">
                   <li class="tocline">
                     <a class="tocxref" href=
                     "#example-smart-factory"><bdi class=
-                    "secno">4.1.2.1</bdi> Example: Smart
-                    Factory</a>
+                    "secno">4.1.2.1</bdi> Example: 智能工厂</a>
                   </li>
                 </ol>
               </li>
@@ -1867,43 +1866,42 @@
               </li>
               <li class="tocline">
                 <a class="tocxref" href="#oilandgas"><bdi class=
-                "secno">4.1.5</bdi> Oil and Gas</a>
+                "secno">4.1.5</bdi> 石油和天然气</a>
               </li>
               <li class="tocline">
                 <a class="tocxref" href="#insurance"><bdi class=
-                "secno">4.1.6</bdi> Insurance</a>
+                "secno">4.1.6</bdi> 保险</a>
               </li>
               <li class="tocline">
                 <a class="tocxref" href=
                 "#engineering-and-construction"><bdi class=
-                "secno">4.1.7</bdi> Engineering and
-                Construction</a>
+                "secno">4.1.7</bdi> 工程与施工</a>
               </li>
               <li class="tocline">
                 <a class="tocxref" href="#agriculture"><bdi class=
-                "secno">4.1.8</bdi> Agriculture</a>
+                "secno">4.1.8</bdi> 农业</a>
               </li>
               <li class="tocline">
                 <a class="tocxref" href="#healthcare"><bdi class=
-                "secno">4.1.9</bdi> Healthcare</a>
+                "secno">4.1.9</bdi> 医疗</a>
               </li>
               <li class="tocline">
                 <a class="tocxref" href=
                 "#environmentmonitoring"><bdi class=
-                "secno">4.1.10</bdi> Environment Monitoring</a>
+                "secno">4.1.10</bdi> 环境监测</a>
               </li>
               <li class="tocline">
                 <a class="tocxref" href="#smartcities"><bdi class=
-                "secno">4.1.11</bdi> Smart Cities</a>
+                "secno">4.1.11</bdi> 智慧城市</a>
               </li>
               <li class="tocline">
                 <a class="tocxref" href=
                 "#smartbuildings"><bdi class="secno">4.1.12</bdi>
-                Smart Buildings</a>
+                智慧楼宇</a>
               </li>
               <li class="tocline">
                 <a class="tocxref" href="#connectedcar"><bdi class=
-                "secno">4.1.13</bdi> Connected Car</a>
+                "secno">4.1.13</bdi> 车联网</a>
                 <ol class="toc">
                   <li class="tocline">
                     <a class="tocxref" href=
@@ -1938,11 +1936,11 @@
               <li class="tocline">
                 <a class="tocxref" href=
                 "#smart-home-gateways"><bdi class=
-                "secno">4.2.4</bdi> Smart Home Gateways</a>
+                "secno">4.2.4</bdi> 智能家居网关</a>
               </li>
               <li class="tocline">
                 <a class="tocxref" href="#edge-devices"><bdi class=
-                "secno">4.2.5</bdi> Edge Devices</a>
+                "secno">4.2.5</bdi> 边缘设备</a>
               </li>
               <li class="tocline">
                 <a class="tocxref" href=
@@ -2084,12 +2082,12 @@
       </li>
       <li class="tocline">
         <a class="tocxref" href="#sec-wot-architecture"><bdi class=
-        "secno">6.</bdi> WoT Architecture</a>
+        "secno">6.</bdi> WoT 架构</a>
         <ol class="toc">
           <li class="tocline">
             <a class="tocxref" href=
             "#sec-architecture-overview"><bdi class=
-            "secno">6.1</bdi> Overview</a>
+            "secno">6.1</bdi> 概述</a>
           </li>
           <li class="tocline">
             <a class="tocxref" href="#sec-affordances"><bdi class=
@@ -2102,7 +2100,7 @@
           <li class="tocline">
             <a class="tocxref" href=
             "#sec-interaction-model"><bdi class="secno">6.4</bdi>
-            Interaction Model</a>
+            交互模型</a>
             <ol class="toc">
               <li class="tocline">
                 <a class="tocxref" href="#properties"><bdi class=
