--- a/translate/wot/wot-thing-architecture.html
+++ b/translate/wot/wot-thing-architecture.html
@@ -1887,10 +1887,7 @@
               </li>
               <li class="tocline">
                 <a class="tocxref" href=
-                "#environmentmonitoring"><bdi class=
-                "secno">4.1.10</bdi> 环境监测</a>
-              </li>
-              <li class="tocline">
+                "#environmentmonitoring"><bdi class=git              <li class="tocline">
                 <a class="tocxref" href="#smartcities"><bdi class=
                 "secno">4.1.11</bdi> 智慧城市</a>
               </li>
@@ -2457,15 +2454,13 @@
       describing the metadata and network-facing interfaces of
       Things. It is based upon the fundamental concepts introduced
       in this document, such as interaction affordances.</li>
-      <li>The <em>Web of Things (WoT) Binding Templates</em>
+      <li> <em>Web of Things (WoT) 绑定模板</em>
       [<cite><a class="bibref" data-link-type="biblio" href=
       "#bib-wot-binding-templates" title=
       "Web of Things (WoT) Binding Templates">WOT-BINDING-TEMPLATES</a></cite>]
-      provides informational guidelines on how to define
-      network-facing interfaces in Things for particular protocols
-      and IoT ecosystems, which we call Protocol Bindings. The
-      document also provides examples for a number of existing IoT
-      ecosystems and standards.</li>
+      提供了有关如何为特定协议和物联网生态系统定义面向网络的接口的信息指南，
+      我们称之为协议绑定。
+      该文件还提供了一些现有物联网生态系统和标准的例子。</li>
       <li>The <em>Web of Things (WoT) Scripting API</em>
       [<cite><a class="bibref" data-link-type="biblio" href=
       "#bib-wot-scripting-api" title=
